--- a/hds/build.xml
+++ b/hds/build.xml
@@ -228,13 +228,13 @@
 
   <path id="built.classpath">
 
-    <!-- Directly dependent third party jars -->
-    <path refid="built.jarpath"/>
-
     <!-- All locally built classes -->
     <dirset dir="${star.build.dir}">
       <include name="*/build/classes"/>
     </dirset>
+
+    <!-- Directly dependent third party jars -->
+    <path refid="built.jarpath"/>
 
     <!-- Finally add all "dist" jar files to make sure everything is
      !   resolved, including relative URLs out of the local package -->
@@ -273,6 +273,10 @@
 
   <!-- Turn this path into a string which is passed to the tests -->
   <property name="tests-classpath.value" refid="tests-classpath"/>
+  <property name="classpath.value" refid="classpath"/>
+  <property name="local.classpath.value" refid="local.classpath"/>
+  <property name="built.classpath.value" refid="built.classpath"/>
+  <property name="installed.classpath.value" refid="installed.classpath"/>
 
   <!--
    !    =========================================
