Added third-party HTM classes (Hierarchical Triangular Mesh).

--- a/table/build.xml
+++ b/table/build.xml
@@ -220,7 +220,22 @@
     <pathelement location="${star.build.dir}/util/lib/util/util.jar"/>
   </extclasspath>
 
+  <!-- "Local" third party jars. Normally these will be kept in their
+   !   own third party package, but may be kept here temporarily, say
+   !   if there are version conflicts that cannot be addressed.
+   !   They are installed with the package jar files and should be
+   !   entered into the main jar file manifest.
+   !-->
+  <path id="package.jars">
+     <fileset dir="${src.jars.dir}">
+        <include name="*.jar"/>
+     </fileset>
+  </path>
+
   <path id="built.classpath">
+
+    <!-- Local third party jars -->
+    <path refid="package.jars"/>
 
     <!-- All locally built classes -->
     <dirset dir="${star.build.dir}">
@@ -357,6 +372,15 @@
      !   (i.e. are discovered using "getResource()"). -->
     <copy todir="${build.classes}">
       <fileset dir="${src.dir}/resources"/>
+    </copy>
+
+    <!-- Local third party jars, if any. Copy straight into
+     !   distribution directories to save on unnecessary copies and to
+     !   make these available for resolution by other locally built
+     !   packages that are using this one -->
+    <mkdir dir="${dist.lib.pkg}"/>
+    <copy todir="${dist.lib.pkg}">
+       <fileset dir="${src.jars.dir}"/>
     </copy>
 
   </target>
