Added copy of images into release.

--- a/diva/build.xml
+++ b/diva/build.xml
@@ -354,12 +354,11 @@
 
     <!-- Copy extra files that should live with packages classes
      !   (i.e. are discovered using "getResource()"). -->
-    <!-- <copy todir="${build.classes}">
+    <copy todir="${build.classes}">
       <fileset dir="${java.dir}">
-        <include name="**/deploy.wsdd"/>
         <include name="**/images/**"/>
       </fileset>
-    </copy>-->
+    </copy>
 
     <!-- Local third party jars, if any. Copy straight into
      !   distribution directories to save on unnecessary copies and to
