--- a/table/build.xml
+++ b/table/build.xml
@@ -886,13 +886,13 @@
           description="-> makes the STIL package web page">
 
     <!-- Transform XML document to readable formats. -->
-    <xslt in="${src.docs}/stil_sun.xml" style="${src.docs}/toHTML1.xslt" 
-          out="${build.docs}/stil_sun.html">
+    <xslt in="${src.docs}/sun252.xml" style="${src.docs}/toHTML1.xslt" 
+          out="${build.docs}/sun252.html">
       <param name="JAVADOCS" expression="javadocs/"/>
       <param name="VERSION" expression="${version}"/>
     </xslt>
 
-    <xslt in="${src.docs}/stil_sun.xml" style="${src.docs}/toHTML.xslt"
+    <xslt in="${src.docs}/sun252.xml" style="${src.docs}/toHTML.xslt"
           out="${build.docs}/tmp_multi.html">
       <param name="JAVADOCS" expression="../javadocs/"/>
       <param name="VERSION" expression="${version}"/>
@@ -902,7 +902,7 @@
     <java classname="MultiHTML" fork="true" dir="${src.docs}" 
           classpath="${build.docs}">
       <arg file="${build.docs}/tmp_multi.html"/>
-      <arg file="${build.docs}/stil_sun"/>
+      <arg file="${build.docs}/sun252"/>
     </java>
 
     <!-- Copy auxiliary files to built docs directory. -->
@@ -955,7 +955,7 @@
                includes="uk/ac/starlink/util/*"/>
       <fileset dir="${build.docs}">
         <include name="*.html"/>
-        <include name="stil_sun*/**"/>
+        <include name="sun252*/**"/>
       </fileset>
     </zip>
 
