Took all the clever documentation processing out again. It is now done by the external STIL package (which is a documentation-only package).

--- a/table/build.xml
+++ b/table/build.xml
@@ -873,102 +873,6 @@
 
   </target>
 
-  <!--
-   !   ============================
-   !   Creates custom documentation
-   !   ============================
-   !
-   !  This is currently a bit messy - it's a private target.
-   !-->
-
-  <target name="webpage"
-          depends="build, javadocs"
-          description="-> makes the STIL package web page">
-
-    <!-- Transform XML document to readable formats. -->
-    <xslt in="${src.docs}/sun252.xml" style="${src.docs}/toHTML1.xslt" 
-          out="${build.docs}/sun252.html">
-      <param name="JAVADOCS" expression="javadocs/"/>
-      <param name="VERSION" expression="${version}"/>
-    </xslt>
-
-    <xslt in="${src.docs}/sun252.xml" style="${src.docs}/toHTML.xslt"
-          out="${build.docs}/tmp_multi.html">
-      <param name="JAVADOCS" expression="../javadocs/"/>
-      <param name="VERSION" expression="${version}"/>
-    </xslt>
-    <javac srcdir="${src.docs}" destdir="${build.docs}"
-           includes="MultiHTML.java"/>
-    <java classname="MultiHTML" fork="true" dir="${src.docs}" 
-          classpath="${build.docs}">
-      <arg file="${build.docs}/tmp_multi.html"/>
-      <arg file="${build.docs}/sun252"/>
-    </java>
-
-    <!-- Copy auxiliary files to built docs directory. -->
-    <copy todir="${build.docs}">
-      <fileset dir="${src.docs}">
-        <include name="*.gif"/>
-        <include name="*.xml"/>
-      </fileset>
-    </copy>
-    <copy file="${src.docs}/stil.html" tofile="${build.docs}/index.html"/>
-
-    <!-- Full javadocs (includes some external packages) -->
-    <mkdir dir="${build.docs}/javadocs"/>
-    <javadoc useexternalfile="yes"
-             destdir="${build.docs}/javadocs"
-             author="true"
-             version="true"
-             locale="en"
-             windowtitle="STIL"
-             doctitle="STIL"
-             defaultexcludes="yes"
-             source="${source.version}"
-             classpathref="classpath">
-      <package name="uk.ac.starlink.table.*"/>
-      <package name="uk.ac.starlink.votable.*"/>
-      <package name="uk.ac.starlink.fits.*"/>
-      <package name="uk.ac.starlink.mirage.*"/>
-      <package name="uk.ac.starlink.util"/>
-      <sourcepath>
-        <pathelement path="${star.dir}/source/table/src/main"/>
-        <pathelement path="${star.dir}/source/votable/src/main"/>
-        <pathelement path="${star.dir}/source/fits/src/main"/>
-        <pathelement path="${star.dir}/source/mirage/src/main"/>
-        <pathelement path="${star.dir}/source/util/src/main"/>
-      </sourcepath>
-      <link offline="true" href="${javaapi.url}"
-            packagelistLoc="${javaapi.lis}"/>
-      <bottom>Copyright &#169; ${year} \\
-              CLRC: Central Laboratory of the Research Councils.
-              All Rights Reserved.</bottom>
-    </javadoc>
-
-    <zip destfile="${build.docs}/stil_doc.zip">
-      <fileset dir="${star.dir}/source/table/build/classes"/>
-      <fileset dir="${star.dir}/source/votable/build/classes"/>
-      <fileset dir="${star.dir}/source/fits/build/classes"/>
-      <fileset dir="${star.dir}/source/tamfits/build/classes"/>
-      <fileset dir="${star.dir}/source/mirage/build/classes"/>
-      <fileset dir="${star.dir}/source/util/build/classes"
-               includes="uk/ac/starlink/util/*"/>
-      <fileset dir="${build.docs}">
-        <include name="*.html"/>
-        <include name="sun252*/**"/>
-      </fileset>
-    </zip>
-
-    <zip destfile="${build.docs}/stil_src.zip">
-      <fileset dir="${star.dir}/source/table/src/main/" includes="**/*.java"/>
-      <fileset dir="${star.dir}/source/votable/src/main/" includes="**/*.java"/>
-      <fileset dir="${star.dir}/source/fits/src/main/" includes="**/*.java"/>
-      <fileset dir="${star.dir}/source/mirage/src/main" includes="**/*.java"/>
-      <fileset dir="${star.dir}/source/util/src/main" includes="**/*.java"/>
-    </zip>
-  </target>
-
-
 
   <!-- This checks if the javadocs are up to date with respect to the
    !   java source, if so then the "javadoc.notrequired" variable is
@@ -1062,6 +966,7 @@
       <jvmarg value="${junit.assertions}"/>
 
       <sysproperty key="build.tests" value="${build.tests}"/>
+      <sysproperty key="src.dir" value="${src.dir}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
 
@@ -1088,6 +993,7 @@
           filtertrace="${junit.filtertrace}">
 
       <sysproperty key="hdx.home" value="${hdx.home}"/>
+      <sysproperty key="src.dir" value="${src.dir}"/>
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
