--- a/jnihds/build.xml
+++ b/jnihds/build.xml
@@ -7,6 +7,7 @@
  !   release. It requires Apache ANT and a Java Development Kit.
  !
  !      build            -> compiles the source code
+ !      build-native     -> builds native libraries from C sources
  !      clean            -> cleans up build and dist products
  !      deinstall        -> undo the install target
  !      dist             -> creates the local binary distribution
@@ -124,6 +125,7 @@
   <property name="build.dir" value="${basedir}/build"/>
   <property name="build.classes" value="${build.dir}/classes"/>
   <property name="build.jni" location="${build.dir}/jni"/>
+  <property name="build.lib" location="${build.dir}/lib"/>
   <property name="build.java" value="${build.dir}/java"/>
   <property name="build.tests" value="${build.dir}/testcases"/>
   <property name="build.tests.javadocs" value="${build.dir}/javadocs.test/"/>
@@ -146,9 +148,10 @@
   <property name="dist.etc.pkg" value="${dist.dir}/etc/${name}"/>
   <property name="dist.javadocs" value="${dist.dir}/docs/${name}/javadocs"/>
 
-  <!-- Architecture-specific files (shared libraries) will be placed in
-   !   an appropriate subdirectory of dist.lib -->
+  <!-- Architecture-specific files (shared libraries) -->
   <property name="dist.lib.arch" value="${dist.lib}/${os.arch}"/>
+  <property name="src.lib.arch" value="${src.jars.dir}/${os.arch}"/>
+  <property name="build.lib.arch" value="${build.lib}/${os.arch}"/>
 
   <!-- Version for zipped/tarred export files. -->
   <property name="dist.version" value="${name}-${version}"/>
@@ -165,9 +168,6 @@
   <property name="src.jni" value="${src.dir}/jni"/>
   <property name="jdk" value="${java.home}/.."/>
   <property name="stardev" value="/stardev"/>
-
-  <!-- Non-standard build file directories -->
-  <property name="build.jni" value="${build.dir}/jni"/>
 
   <!-- Non-standard files -->
   <property name="shared.object" value="lib${name}.so"/>
@@ -342,7 +342,7 @@
    !  (i.e. resources like images) should also be copied into place here.
    !-->
   <target name="build"
-          depends="prepare, check_packages, build_classes, build_jni"
+          depends="prepare, check_packages, build_classes, unpack_jni"
           unless="runonly.install"
           description="-> compiles the source code">
 
@@ -365,6 +365,20 @@
   </target>
 
 
+  <!-- Pulls the architecture-specific shared library out of the source
+   !   jar file in which it lives.  This jar file is in the CVS repository,
+   !   it is not built as part of the normal build target. 
+   !   It can be built using the "build-native" target, but this requires
+   !   more than the basic CVS files to work (e.g. it needs the stardev
+   !   classic libraries) -->
+  <target name="unpack_jni">
+    <unjar src="${src.lib.arch}/${name}_libs.jar"
+           dest="${dist.lib.arch}">
+      <patternset excludes="META-INF*/*"/>
+    </unjar>
+  </target>
+
+
   <!-- Build the java class files. -->
   <target name="build_classes">
     <mkdir dir="${build.classes}"/>
@@ -382,14 +396,36 @@
     </javac>
   </target>
 
-  <!-- Build any shareable libraries needed to support this package.
-   !   This goes straight into the distribution directory to save on
-   !   space, and to make it immediately available to locally build
-   !   packages  -->
-  <target name="build_jni" depends="assemble_jni">
+
+  <!--
+   !  ============================================
+   !  Build the native shared library from sources
+   !  ============================================
+   !
+   !  This does the actual build of the shared library, and requires
+   !  a stardev installation.  It is not a dependency of any of the 
+   !  other public targets, and should not be invoked as part of the
+   !  normal build process.  It should be invoked periodically 
+   !  (when JNIHDS or HDS changes), once on each of the supported
+   !  platforms, and the resulting new 'source' files (shared library
+   !  jar files) checked in.
+   !-->
+  <target name="build-native" 
+          depends="assemble_jni"
+          description="-> builds native libaries from C sources">
+
+    <!-- Build the library -->
     <antcall target="execute_mk_script">
       <param name="mk.action" value="shared"/>
     </antcall>
+
+    <!-- Jar it up and copy it into the source tree ready for CVS checkin -->
+    <jar destfile="${src.lib.arch}/${name}_libs.jar"
+         basedir="${build.lib.arch}">
+      <manifest>
+        <attribute name="Built-By" value="${user.name}"/>
+      </manifest>
+    </jar>
   </target>
 
 
@@ -416,7 +452,7 @@
      !-->
     <property name="java.shareables" value=""/>
 
-    <mkdir dir="${dist.lib.arch}"/>
+    <mkdir dir="${build.lib.arch}"/>
 
     <echo message="java.home=${java.home}"/>
 
@@ -427,7 +463,7 @@
       <env key="STARLINK" value="${stardev}"/>
       <env key="JDK" value="${jdk}"/>
       <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${dist.lib.arch}"/>
+      <env key="TARGET_LIB" value="${build.lib.arch}"/>
       <arg line="${mk.action}"/>
     </exec>
 
@@ -438,7 +474,7 @@
       <env key="STARLINK" value="${stardev}"/>
       <env key="JDK" value="${jdk}"/>
       <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${dist.lib.arch}"/>
+      <env key="TARGET_LIB" value="${build.lib.arch}"/>
       <arg line="${mk.action}"/>
     </exec>
 
@@ -449,7 +485,7 @@
       <env key="STARLINK" value="${stardev}"/>
       <env key="JDK" value="${jdk}"/>
       <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${dist.lib.arch}"/>
+      <env key="TARGET_LIB" value="${build.lib.arch}"/>
       <arg line="${mk.action}"/>
     </exec>
 
@@ -572,30 +608,6 @@
     </jnlp>
   </target>
 
-
-  <!-- 
-   !  ===================================
-   !  Create a shareable library jar file
-   !  ===================================
-   ! 
-   !  This target creates a jar file that contains the shareable
-   !  library for the current architecture. It is intended for use 
-   !  by webstart applications. Copies of this jar file should be
-   !  periodically committed to CVS (in the "src/lib/${arch} directory)
-   !  so that a webstart install can support all the known operating
-   !  systems. Note that signed jars should not be committed.
-   !-->
-  <target name="webstart_jar"
-          depends="build">
-
-    <jar destfile="${dist.lib.arch}/${name}_libs.jar"
-         basedir="${dist.lib.arch}" excludes="**/*.jar">
-      <manifest>
-        <attribute name="Built-By" value="${user.name}"/>
-      </manifest>
-    </jar>
-
-  </target>
 
   <!--
    !   =============================
