Added SOAP Server and simple (fake) displaySeries() method in the FrogSOAPServer class. Note that the deploy.wsdd is added into the JAR file from the build.xml file. A couple of simple Perl test scripts added to the test directory, note that the path to the perl binary in these wrong for most machines as I have it set to /home/perl/bin/perl in the hash-bang line. Mostly this should be /usr/bin/perl, although its unlikely people will have SOAP::Lite installed by default, these scripts are development only I think, so this shouldn't make much of a difference.
Things look to be working at this point, a simple displaySeries()
taking a String should be easily written at this point.

--- a/frog/build.xml
+++ b/frog/build.xml
@@ -393,6 +393,7 @@
      !   (i.e. are discovered using "getResource()"). -->
     <copy todir="${build.classes}">
       <fileset dir="${java.dir}">
+        <include name="**/deploy.wsdd"/>
         <include name="**/images/**"/>
       </fileset>
     </copy>
