Added frog_help.jar to .properties file, FROG now actually finds it...

--- a/frog/.properties
+++ b/frog/.properties
@@ -1,4 +1,4 @@
-jar.class.path=diva.jar jama.jar \
+jar.class.path=diva.jar jama.jar frog_help.jar \
 ../ndx/ndx.jar ../array/array.jar ../tamfits/tamfits.jar \
 ../jniast/jniast.jar ../fits/fits.jar ../hds/hds.jar../table/table.jar \
 ../topcat/topcat.jar
