--- a/build.xml
+++ b/build.xml
@@ -139,6 +139,9 @@
 
     <echo message="Executing DIVA target: ${what}"/>
     <ant dir="./diva" target="${what}"/>
+    
+    <echo message="Executing HELP target: ${what}"/>
+    <ant dir="./help" target="${what}"/>
 
     <echo message="Executing ASTGUI target: ${what}"/>
     <ant dir="./astgui" target="${what}"/>
