--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -589,6 +589,7 @@
          <extension name="UTIL" href="util.jnlp"/>
          <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
          <extension name="MIRAGE" href="mirage.jnlp"/>
+         <extension name="JAVAHELP" href="javahelp.jnlp"/>
        </resources>
        <component_desc/>
      </jnlp>
