--- a/splat/.properties
+++ b/splat/.properties
@@ -4,4 +4,4 @@ splat_help.jar jsci_core.jar jsci_wavelet.jar \
 ../astgui/astgui.jar ../ndx/ndx.jar ../hdx/hdx.jar ../array/array.jar \
 ../tamfits/tamfits.jar ../jniast/jniast.jar ../soapserver/soapserver.jar \
 ../fits/fits.jar ../hds/hds.jar ../treeview/treeview.jar ../pal/pal.jar \
-../diva/diva.jar ../help/help.jar
+../diva/diva.jar ../help/help.jar ../table/table.jar ../votable/votable.jar
